5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1753_3087.log
== TEST (2019-05-16 19:12:17) 
-- CODE:
x=int(float("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
	   j=j+x
	   z=z+1
		x=int(float("Digite um numero: "))
	else:
		g=g+x
		f=f+1
		x=int(float("Digite um numero: "))

print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
File "XXXX", line 10
    x=int(float("Digite um numero: "))
                                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:12:25) 
-- CODE:
x=int(float("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
	   j=j+x
	   z=z+1
		 x=int(float("Digite um numero: "))
	else:
		g=g+x
		f=f+1
		 x=int(float("Digite um numero: "))

print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
File "XXXX", line 10
    x=int(float("Digite um numero: "))
                                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:12:50) 
-- CODE:
x=int(float("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
	   j=j+x
	   z=z+1
		x=int(float())
	else:
		g=g+x
		f=f+1

print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
File "XXXX", line 10
    x=int(float())
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:13:02) 
-- CODE:
x=int(float("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
	      j=j+x
	      z=z+1
		   x=int(float())
	else:
		g=g+x
		f=f+1

print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
File "XXXX", line 10
    x=int(float())
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:13:15) 
-- CODE:
x=int(float("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		j=j+x
	    

print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(float("digite um numero: "))
ValueError: could not convert string to float: 'digite um numero: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:13:31) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
	   j=j+x
	   z=z+1
		 x=int(float("Digite um numero: "))
	else:
		g=g+x
		f=f+1
		 x=int(float("Digite um numero: "))

print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
File "XXXX", line 10
    x=int(float("Digite um numero: "))
                                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:13:40) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
	   j=j+x
	   z=z+1
		 x=int(input("Digite um numero: "))
	else:
		g=g+x
		f=f+1
		 x=int(float("Digite um numero: "))

print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
File "XXXX", line 10
    x=int(input())
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:13:45) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
	   j=j+x
	   z=z+1
		 x=int(input("Digite um numero: "))
	else:
		g=g+x
		f=f+1
		 x=int(input("Digite um numero: "))

print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
File "XXXX", line 10
    x=int(input())
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:13:53) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
	   j=j+x
	   z=z+1
		
	else:
		g=g+x
		f=f+1


print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
File "XXXX", line 10
    x=int(input())
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:14:03) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
	   j=j+x
	   z=z+1
		x=int(input("Digite um numero: "))
	else:
		g=g+x
		f=f+1


print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
File "XXXX", line 10
    x=int(input())
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:14:19) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		x=int(input())
	  
	else:
		g=g+x
		f=f+1


print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(round(j/z,2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:14:26) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		x=int(input("Digite um numero: "))
	  
	else:
		g=g+x
		f=f+1


print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(round(j/z,2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:14:31) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		z=z+1
		x=int(input("Digite um numero: "))
	  
	else:
		g=g+x
		f=f+1


print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(g/f,2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:14:38) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		z=z+1
		j=j+x
		x=int(input("Digite um numero: "))
	  
	else:
		g=g+x
		f=f+1


print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(round(g/f,2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:14:50) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		z=z+1
		j=j+x
		x=int(input("Digite um numero: "))
	  
	else:
		g=g+x
		f=f+1
		x=int(input("Digite um numero: "))


print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(g/f,2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:15:05) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		z=z+1
		j=j+x
		x=int(input("Digite um numero: "))
	  
	else:
		g=g+x
		f=f+1
		x=int(input("Digite um numero: "))


print(round(j/z,2))
print(round(g/f,2))
		
-- EXECUTION TIME:
0.201162
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3087/main.py", line 19, in <module>
    print(round(g/f,2))
ZeroDivisionError: division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:01) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		z=z+1
		j=j+x
		x=int(input("Digite um numero: "))
	  
	else:
		g=g+x
		f=f+1
		x=int(input("Digite um numero: "))


print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(g/f,2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:18:20) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		z=z+1
		j=j+x
		x=int(input("Digite um numero: "))
	  
	else:
		g=g+x
		f=f+1
		x=int(input("Digite um numero: "))


print(round(j/z,2))
print(round(g/f,2))
		
-- EXECUTION TIME:
0.20001
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3087/main.py", line 19, in <module>
    print(round(g/f,2))
ZeroDivisionError: division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:24) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		z=z+1
		j=j+x
		x=int(input("Digite um numero: "))
	  
	else:
		g=g+x
		f=f+1
		x=int(input("Digite um numero: "))


print(round(j/z,2))
print(round(g/f,2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(g/f,2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:41) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		z=z+1
		j=j+x
		x=int(input("Digite um numero: "))
	  
	else:
		g=g+x
		f=f+1
		x=int(input("Digite um numero: "))

if(z>0):
   print(round(j/z,2))
else:
	print(round(j/1,2))
	
print(round(g/f,2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print(round(g/f,2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:47) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		z=z+1
		j=j+x
		x=int(input("Digite um numero: "))
	  
	else:
		g=g+x
		f=f+1
		x=int(input("Digite um numero: "))

if(z>0):
   print(round(j/z,2))
else:
	print(round(j/1,2))
	
print(round(g/f,2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print(round(g/f,2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:19:58) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		z=z+1
		j=j+x
		x=int(input("Digite um numero: "))
	  
	else:
		g=g+x
		f=f+1
		x=int(input("Digite um numero: "))

if(z>0):
   print(round(j/z,2))
else:
	print(round(j/1,2))
	
print(round(g/f,2))
		
-- EXECUTION TIME:
0.269235
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3087/main.py", line 22, in <module>
    print(round(g/f,2))
ZeroDivisionError: division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:20:35) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		z=z+1
		j=j+x
		x=int(input("Digite um numero: "))
	  
	else:
		g=g+x
		f=f+1
		x=int(input("Digite um numero: "))

if(z!=0):
   print(round(j/z,2))
else:
	print(round(j/1,2))

if(f!=0):	
   print(round(g/f,2))
else:
	print(round(g/1,2))
		
-- OUTPUT:
-6.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:20:43) 
-- CODE:
x=int(input("digite um numero: "))
j=0
z=0
g=0
f=0
while(x!=0):
	if(x%2==0):
		z=z+1
		j=j+x
		x=int(input("Digite um numero: "))
	  
	else:
		g=g+x
		f=f+1
		x=int(input("Digite um numero: "))

if(z!=0):
   print(round(j/z,2))
else:
	print(round(j/1,2))

if(f!=0):	
   print(round(g/f,2))
else:
	print(round(g/1,2))
		
-- EXECUTION TIME:
0.274001
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:
-6.0
0.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
5.33
8.0
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:
2.5
1.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
